chore: fix logo not centered when small image is used

--- a/assets/scss/components/elements/navigation/_nav-brand.scss
+++ b/assets/scss/components/elements/navigation/_nav-brand.scss
@@ -11,6 +11,7 @@
   img {
 	max-width: var(--maxWidth);
 	display: block;
+	margin: 0 auto;
   }
 
   .title-with-logo {
